<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/proceed"
        android:backgroundTint="@color/amazon_yellow"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:id="@+id/layout_linear_item1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/landoflustrousop"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name1"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/price1"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="12sp"
                android:textColor="@color/green"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_by"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merchant_name1"
                    android:textColor="@color/blue"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="35dp"
                    android:src="@drawable/truck"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/delivered"
                    android:layout_marginTop="13dp"
                    android:textSize="11sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_name"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginRight="3dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color_type"
                    android:textColor="@color/black"
                    />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            android:gravity="center"
            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:backgroundTint="@color/ash"
                android:background="@drawable/background_border"
                android:src="@drawable/shopping"

                />
            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/char_1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:background="@drawable/background_border"
                />
            <TextView
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:backgroundTint="@color/ash"
                android:background="@drawable/background_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="9sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="9sp"
                />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="390dp"
        android:layout_height="2dp"
        android:background="@color/ash"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:id="@+id/layout_linear_item2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/exotic_wood_bedroom"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name2"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/price2"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispatch"
                android:textSize="12sp"
                android:textColor="@color/orange"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sold_by"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/merchant_name2"
                    android:textColor="@color/blue"
                    />
            </LinearLayout>




        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="480dp"
        android:layout_marginLeft="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"


            android:gravity="center"
            >
            <ImageView
                android:layout_width="45dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:backgroundTint="@color/ash"
                android:background="@drawable/background_border"
                android:src="@drawable/shopping"

                />
            <TextView
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/char_1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:background="@drawable/background_border"
                />
            <TextView
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:backgroundTint="@color/ash"
                android:background="@drawable/background_border"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:backgroundTint="@color/white"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="9sp"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="9sp"
                />

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>